objects/Document_Upload_Log__c.object
<CustomObject>
    <fields>
        <fullName>Bucket_Filename__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bucket Filename</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bucket__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bucket</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client_IP_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client IP Address</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Document__c</fullName>
        <label>Customer Document</label>
        <referenceTo>Customer_Document__c</referenceTo>
        <relationshipLabel>Document Upload Logs</relationshipLabel>
        <relationshipName>Document_Upload_Logs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>File_Size__c</fullName>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mime_Type__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mime Type</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Salesforce_Generated_Filename__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Salesforce Generated Filename</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Upload_Time__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Upload Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>externalId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>externalId</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Document Upload Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Upload Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Upload Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>